<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.heiden</groupId>
  <artifactId>jem</artifactId>
  <version>1.0-SNAPSHOT</version>

  <prerequisites>
    <maven>3.5</maven>
  </prerequisites>

  <properties>
    <project.build.sourceEncoding>Cp1252</project.build.sourceEncoding>
    <java.version>9</java.version>

    <serialthreads.version>1.0-SNAPSHOT</serialthreads.version>
    <c64dt.version>1.0-SNAPSHOT</c64dt.version>

    <commons-lang3.version>3.7</commons-lang3.version>
    <junit.version>4.12</junit.version>
    <log4j.version>2.10.0</log4j.version>
    <slf4j.version>1.7.25</slf4j.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.6.1</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <debug>true</debug>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.20</version>
        <configuration>
          <testFailureIgnore>true</testFailureIgnore>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
      <version>${log4j.version}</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4j.version}</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.serialthreads</groupId>
      <artifactId>serialthreads</artifactId>
      <version>${serialthreads.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>de.heiden.c64dt</groupId>
      <artifactId>assembler</artifactId>
      <version>${c64dt.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>de.heiden.c64dt</groupId>
      <artifactId>bytes</artifactId>
      <version>${c64dt.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>de.heiden.c64dt</groupId>
      <artifactId>disk</artifactId>
      <version>${c64dt.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>de.heiden.c64dt</groupId>
      <artifactId>gui</artifactId>
      <version>${c64dt.version}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${commons-lang3.version}</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.serialthreads</groupId>
      <artifactId>serialthreads</artifactId>
      <type>test-jar</type>
      <version>${serialthreads.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

</project>